--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+  
+        <li>
+            <a href="./recipes/lasagna.html">Lasagne</a>
+        </li>
+        <li>
+            <a href="./recipes/cocktail.html">Cocktail Meatballs</a>
+        </li>
+        <li>
+            <a href="./recipes/crab.html">Perfect Crab-Stuffed Mushrooms</a>
+        </li>
+    </ul>
     
+    
+
 </body>
 </html>
