i changed anchor tag attribute

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <ul>
   
         <li>
-            <a href="./recipes/lasagna.html">Lasagne</a>
+            <a href="./recipes/lasagna.html" target="_blank">Lasagne</a>
         </li>
         <li>
-            <a href="./recipes/cocktail.html">Cocktail Meatballs</a>
+            <a href="./recipes/cocktail.html" target="_blank">Cocktail Meatballs</a>
         </li>
         <li>
-            <a href="./recipes/crab.html">Perfect Crab-Stuffed Mushrooms</a>
+            <a href="./recipes/crab.html" target="_blank">Perfect Crab-Stuffed Mushrooms</a>
         </li>
     </ul>
     
